# ekosystem

./: CMakeLists.txt  Ekosystem.pro  README.md  main.cpp
body/: body.cpp  body.h  bodyregistry.cpp  bodyregistry.h
logging/: ekolog.cpp  ekolog.h
organism/: human.cpp  human.h  infobundle.cpp  infobundle.h  organism.cpp  organism.h  virus.cpp  virus.h
simulation/: simulation.cpp  simulation.h
space/: bodynotinspaceexception.h  coordinates.h  direction.h  space.cpp  space.h  vicinity.cpp  vicinity.h  vicinityprovider.cpp  vicinityprovider.h
src/: main.cpp
src/app/: QtApplication.cpp  QtApplication.h
src/app/adapter/: AddOrganismPresenterAdapter.h  OrganismPropertiesPresenterAdapter.h  OrganismsListPresenterAdapter.h  SimulationControlsPresenterAdapter.h  SpaceGridPresenterAdapter.h
src/app/model/: AddOrganismBarModel.cpp  AddOrganismBarModel.h  OrganismPropertiesModel.cpp  OrganismPropertiesModel.h  OrganismsListModel.cpp  OrganismsListModel.h  SpaceGridModel.cpp  SpaceGridModel.h
src/app/qml/: AddOrganismBar.qml  OrganismsList.qml  PropertiesList.qml  SimulationControlsBar.qml  SpaceGrid.qml  main.qml  qml.qrc
src/common/: RandomNumberGenerator.cpp  RandomNumberGenerator.h
src/domain/body/: body.cpp  body.h  bodyregistry.h
src/domain/logging/: ekolog.cpp  ekolog.h
src/domain/organism/: OrganismType.h  human.cpp  human.h  infobundle.cpp  infobundle.h  organism.cpp  organism.h  spawn.cpp  spawn.h  virus.cpp  virus.h
src/domain/repository/: BodyRepository.cpp  BodyRepository.h  OrganismRepository.cpp  OrganismRepository.h
src/domain/simulation/: entitytype.h  simulation.cpp  simulation.h
src/domain/space/: space.cpp  space.h  vicinity.cpp  vicinity.h  vicinityprovider.cpp  vicinityprovider.h
src/presentation/common/: GridUtils.cpp  GridUtils.h
src/presentation/presenter/: AddOrganismPresenter.cpp  AddOrganismPresenter.h  OrganismPropertiesPresenter.cpp  OrganismPropertiesPresenter.h  OrganismsListPresenter.cpp  OrganismsListPresenter.h  SimulationControlsPresenter.cpp  SimulationControlsPresenter.h  SpaceGridPresenter.cpp  SpaceGridPresenter.h
src/presentation/state/: ApplicationEvent.h  ApplicationEventListener.h  ApplicationState.h  ApplicationStore.cpp  ApplicationStore.h
src/presentation/view/: AddOrgainsmView.h  OrganismPropertiesView.h  OrganismsListView.h  SpaceGridView.h
